; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat_compat.c_freebsd11_procstat_get_pts_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat_compat.c_freebsd11_procstat_get_pts_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.procstat = type { i32 }
%struct.filestat = type { i32 }
%struct.freebsd11_ptsstat = type { i32, i32 }
%struct.ptsstat = type { i32, i32 }

@trunc_name = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @freebsd11_procstat_get_pts_info(%struct.procstat* %0, %struct.filestat* %1, %struct.freebsd11_ptsstat* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.procstat*, align 8
  %7 = alloca %struct.filestat*, align 8
  %8 = alloca %struct.freebsd11_ptsstat*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.ptsstat, align 4
  %11 = alloca i32, align 4
  store %struct.procstat* %0, %struct.procstat** %6, align 8
  store %struct.filestat* %1, %struct.filestat** %7, align 8
  store %struct.freebsd11_ptsstat* %2, %struct.freebsd11_ptsstat** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load %struct.procstat*, %struct.procstat** %6, align 8
  %13 = load %struct.filestat*, %struct.filestat** %7, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = call i32 @procstat_get_pts_info(%struct.procstat* %12, %struct.filestat* %13, %struct.ptsstat* %10, i8* %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i32, i32* %11, align 4
  store i32 %19, i32* %5, align 4
  br label %44

20:                                               ; preds = %4
  %21 = getelementptr inbounds %struct.ptsstat, %struct.ptsstat* %10, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.freebsd11_ptsstat*, %struct.freebsd11_ptsstat** %8, align 8
  %24 = getelementptr inbounds %struct.freebsd11_ptsstat, %struct.freebsd11_ptsstat* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  %25 = getelementptr inbounds %struct.ptsstat, %struct.ptsstat* %10, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @strlen(i32 %26)
  %28 = sext i32 %27 to i64
  %29 = icmp uge i64 %28, 4
  br i1 %29, label %30, label %36

30:                                               ; preds = %20
  %31 = load %struct.freebsd11_ptsstat*, %struct.freebsd11_ptsstat** %8, align 8
  %32 = getelementptr inbounds %struct.freebsd11_ptsstat, %struct.freebsd11_ptsstat* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @trunc_name, align 4
  %35 = call i32 @strcpy(i32 %33, i32 %34)
  br label %43

36:                                               ; preds = %20
  %37 = load %struct.freebsd11_ptsstat*, %struct.freebsd11_ptsstat** %8, align 8
  %38 = getelementptr inbounds %struct.freebsd11_ptsstat, %struct.freebsd11_ptsstat* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = getelementptr inbounds %struct.ptsstat, %struct.ptsstat* %10, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @memcpy(i32 %39, i32 %41, i32 4)
  br label %43

43:                                               ; preds = %36, %30
  store i32 0, i32* %5, align 4
  br label %44

44:                                               ; preds = %43, %18
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local i32 @procstat_get_pts_info(%struct.procstat*, %struct.filestat*, %struct.ptsstat*, i8*) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @strcpy(i32, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
